# pr-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: airweave-audit.html
examples/airweave-audit/: report.md
skills/pr-audit/: README.md  SKILL.md
skills/pr-audit/scripts/: plan_merges.sh  triage.sh
src/pr_audit/: __init__.py  airweave_backend.py  buckets.py  classify.py  cli.py  features.py  fetch.py  linked.py  models.py  planner.py  render.py  render_html.py  review.py  smells.py
tests/: test_airweave_backend.py  test_buckets.py  test_features.py  test_linked.py  test_planner.py  test_review_context.py  test_smells.py
